Fix alignment of fields

--- a/WeddingWebsite/Components/Pages/Auth/Login.razor.css
+++ b/WeddingWebsite/Components/Pages/Auth/Login.razor.css
@@ -24,7 +24,7 @@ h1 {
     margin-bottom: 15px;
 }
 
-label, p {
+p {
     margin-bottom: 8px;
 }
 
@@ -39,4 +39,15 @@ button {
 
 button:hover {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+label {
+    margin-right: 10px;
+}
+
+.form-input {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 8px;
 }
